<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="#C75146"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/coffee_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/cofff" />


        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:textColor="#000000" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/toppings_name"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="20sp"
                android:background="#2c3d8793"
                android:textStyle="italic|bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/cowhip_image_view"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/images" />

                    <CheckBox
                        android:id="@+id/whipped_cream_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/whipped_name"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/choco_image_view"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/whipped" />

                    <CheckBox
                        android:id="@+id/chocolate_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:text="@string/chocolate_name"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/expresso_image_view"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/cofe" />

                        <CheckBox
                            android:id="@+id/expresso_checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp"
                            android:text="@string/expresso_name"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="24dp"
                        android:layout_marginLeft="30dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/latte_image_view"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginRight="24dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/choco" />

                        <CheckBox
                            android:id="@+id/latte_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp"
                            android:text="@string/latte_name"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/quantity_name"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="20sp"
                android:background="#2c3d8793"
                android:textStyle="italic|bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/rounded_button"
                    android:onClick="decrement"
                    android:text="@string/decrement_name"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/zero_name"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="36sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/rounded_button"
                    android:onClick="increment"
                    android:text="@string/increment_name"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:onClick="submitOrder"
                android:text="@string/order_name"
                android:textAlignment="center"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>